syntax = "proto3";
package Cmd;
/* 登陆信息 */
message Login_C
{
    required string account = 1;
    required string password = 2;
    optional int32 uid = 3;
}

/* 玩家信息 */
message PlayerInfo_S
{
    required int32 uid = 1;
    repeated ItemInfo_CS itemInfo = 2;
    required TaskUpdate_CS taskInfo = 3;
	required int32 serveTime = 4;
}

/* 物品信息 */
message ItemInfo_CS
{
    required int32 itemID = 1;
    optional int32 itemNum = 2;
    optional int32 itemUpdateNum = 3;
}


/* 物品变化 */
message ItemUpdate_CS
{
    required int32 uid = 1;
    repeated ItemInfo_CS itemInfo = 2;
}

/* 心跳包 */
message Heartbeat_CS
{
    required int32 uid = 1;
}

/* 任务更新 */
message TaskUpdate_CS
{
    repeated TaskInfo taskInfo = 1;
	required int32 endTime = 2;
	
	message TaskInfo{
		required int32 taskID = 1;
		/* 0未完成 1完成 */
		required int32 taskState = 2;
    }
}

/* 任务刷新 */
message RefreshTask_C{

}

/* 任务领取奖励 */
message GetTaskAward_C{
	required int32 taskID = 1;
}


/* 相同ID登陆 */
message SameUidLogin_S{
    required int32 uid = 1;
}

/* 系统消息Tips */
message ServeTips_S{
	required string tips = 1;
}





