/** 
 * @description Auto Generate By protoExtendtion.py
 * @version 2019-03-03 02:18:58 
 * @author suo
 */
import { Cmd } from "../../protobuf/common";
Cmd.Login_C.prototype['GetType'] = "Cmd.Login_C";
Cmd.PlayerInfo_S.prototype['GetType'] = "Cmd.PlayerInfo_S";
Cmd.ItemInfo_CS.prototype['GetType'] = "Cmd.ItemInfo_CS";
Cmd.ItemUpdate_CS.prototype['GetType'] = "Cmd.ItemUpdate_CS";
Cmd.Heartbeat_CS.prototype['GetType'] = "Cmd.Heartbeat_CS";
Cmd.TaskUpdate_CS.prototype['GetType'] = "Cmd.TaskUpdate_CS";
Cmd.RefreshTask_C.prototype['GetType'] = "Cmd.RefreshTask_C";
Cmd.GetTaskAward_C.prototype['GetType'] = "Cmd.GetTaskAward_C";
Cmd.SameUidLogin_S.prototype['GetType'] = "Cmd.SameUidLogin_S";
Cmd.ServeTips_S.prototype['GetType'] = "Cmd.ServeTips_S";
